[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/enemy.gd" type="Script" id=1]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0.0745098, 0.6, 0.121569, 1 )

[sub_resource type="CapsuleMesh" id=2]
material = SubResource( 1 )
radius = 0.5
mid_height = 2.0

[sub_resource type="CapsuleShape" id=3]
radius = 0.5
height = 2.0

[sub_resource type="CylinderShape" id=4]
radius = 1.5
height = 3.0

[node name="Enemy" type="KinematicBody"]
collision_layer = 2
collision_mask = 3
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 1.49255, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 1.49255, 0 )
shape = SubResource( 3 )

[node name="PathfindingTimer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="AttackRange" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.01286, 0 )
collision_layer = 0
collision_mask = 16

[node name="CollisionShape" type="CollisionShape" parent="AttackRange"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
shape = SubResource( 4 )

[node name="AttackTimer" type="Timer" parent="."]
[connection signal="timeout" from="PathfindingTimer" to="." method="_on_PathfindingTimer_timeout"]
[connection signal="body_entered" from="AttackRange" to="." method="_on_AttackRange_body_entered"]
[connection signal="body_exited" from="AttackRange" to="." method="_on_AttackRange_body_exited"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
